# pi-ext-prompt-clarity-with-multistep-form-or-options

./: .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  STRUCTURE.md  TODOS.md  biome.json  package.json  tsconfig.json
cli-py/: main.py  pyproject.toml
cli-rs/: Cargo.toml  ts-benchmark.ts
cli-rs/benches/: scoring_benchmark.rs
cli-rs/src/: analysis.rs  lib.rs  main.rs  scoring.rs  types.rs
src/: index.ts
src/core/: constants.ts  floating-context.ts  gnu-utils-service.ts  internal-bus.ts  logger.ts  notification-service.ts  primitives.ts  services.ts  shell-service.ts  store.ts  system-tool-service.ts  ui.ts  validation.ts
src/features/prompt_clarity/: ambiguity-detector.ts  analyzer.ts  index.ts  questionnaire-ui.ts  skill.ts  types.ts
src/windows/: firewall.ts  index.ts  network-share.ts  powershell.ts  process.ts  registry.ts  service-manager.ts  services.ts  window.ts  wmi.ts
tests/: floating-context.test.ts  gnu-utils-service.test.ts  integration.test.ts  internal-bus.test.ts  logger.test.ts  mocks.ts  notification-service.test.ts  primitives.test.ts  shell-service.test.ts  store.test.ts  system-tool-service.test.ts  ui-helpers.test.ts  validation.test.ts
tests/features/prompt_clarity/: ambiguity-detector.test.ts  edge_cases.test.ts  questionnaire-ui.test.ts  resilience.test.ts  trigger-integration.test.ts
tests/stress/: input_chaos.test.ts  llm_failure.test.ts
