[package]
name = "pi-clarity-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
unicode-segmentation = "1.10"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
